compiler/tests/ar/errors/unused_mut.salam
// لغة: العربية
// توقع: E069
دالة الرئيسية:
    متغير عمر := 50
    اطبع(عمر)
نهاية
